# Avito-Django

./: .env  README.md  db.sqlite3  pyproject.toml
ads/: models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
ads/migrations/: 0001_initial.py  0002_initial.py  0002_location_remove_ad_author_ad_category_id_ad_image_and_more.py  0003_rename_category_id_ad_category_and_more.py  0003_selection.py  0004_rename_ads_selection_items_and_more.py  0004_rename_author_id_ad_author.py  0005_category_slug.py  0005_user_age_alter_user_last_name.py  0006_alter_category_slug.py  0006_alter_location_name.py  0007_alter_ad_description_alter_ad_is_published_and_more.py  0007_remove_ad_address.py  0008_remove_user_location_alter_ad_options_and_more.py  0009_alter_ad_image.py  0010_alter_category_name.py
ads/urls/: ad.py  category.py  selection.py
ads/views/: ad.py  category.py  selection.py
avito/: settings.py  urls.py
fixtures/: ads.json  locations.json  utils.py
tests/: factories.py  fixtures.py
tests/ads/: ad_create_test.py  ad_retrieve_test.py  ad_update_test.py  ads_list_test.py  selection_create_test.py
users/: models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_age.py  0002_rename_locations_user_location.py  0002_user_birth_date_alter_user_age_alter_user_email_and_more.py  0003_alter_user_password.py  0003_rename_location_user_locations.py  0003_user_birth_date.py  0004_alter_user_email.py  0004_rename_locations_user_location.py  0005_alter_user_email.py  0006_alter_user_email.py  (+21 more)
